audit(java): 5 modules — a ReDoS section demoing a pattern that is no longer vulnerable
Fourth java batch: java_streams, jdbc_and_database, json_processing_jackson,
jvm_internals, strings_and_text (+ regex_engine_and_redos.md).
215 claims checked, 47 findings.

THE REDOS DEEP-DIVE MEASURED A PATTERN THAT NO LONGER BACKTRACKS:
  `^(a+)+$` returns in MICROSECONDS on JDK 23. Instrumenting charAt gives 372
  calls at n=24, where 2^23 would be 8.4 million. The cause is in Pattern.java:
  Loop.match memoizes failed start positions, with the JDK's own comment saying
  "to stop the exponential backtracking".

  Two conditions disable that memoization -- a backreference anywhere in the
  pattern, and a closure nested inside a quantified group (group0() clears it:
  "no backtracking stopper optimization for inner"). So `^((a+)+)+$` IS still
  exponential, measured at 52.5 s for n=30.

  The whole section was rebuilt on a realistic hostname validator
  `^(([a-z0-9]+)+\.)+[a-z]{2,}$` with every number re-derived from fresh
  measurement (n=28 -> 3,878 ms; 3.46e7 steps/s), including the cap table, the
  DFA comparison and the extrapolation. The possessive fix is verified at 117us
  for n=40 and still accepts mail.example.com.

  This is the sharpest example yet of why the audit runs code: the section was
  internally consistent, well written, and demonstrating nothing.

A FABRICATED EXCEPTION CLASS, 4 OCCURRENCES:
  `HikariPool$PoolTimeoutException` does not exist -- including a fully-
  qualified name inside a log excerpt, which is what made it convincing.
  Decompiling HikariCP 7.1.0: acquire timeout throws
  java.sql.SQLTransientConnectionException. connectionTimeout's default is 30s,
  not the 3s the file called "default".

OBJECT LAYOUT WRONG TWO WAYS, CONTRADICTING ITS OWN PROSE:
  A diagram said 8+4+4+8+4 = 28B padded to 32B and the walkthrough claimed a gap
  at offset 12 -- while the paragraph directly beneath correctly stated that
  HotSpot fills such gaps. JOL on JDK 